--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-requests
-beautifulsoup4
-openpyxl
-xlwt
+streamlit==1.35.0
+requests==2.31.0
+beautifulsoup4==4.12.3
+pandas==2.2.2
+xlwt==1.3.0
+openpyxl==3.1.2
